--- a/_data/machine_files/SandyBridgeEP_E5-2680.yml
+++ b/_data/machine_files/SandyBridgeEP_E5-2680.yml
@@ -1,4 +1,4 @@
-kerncraft version: 0.8.3.dev0
+kerncraft version: 0.8.6.dev0
 model name: Intel(R) Xeon(R) CPU E5-2680 0 @ 2.70GHz
 model type: Intel Xeon SandyBridge EN/EP processor
 clock: 2.7 GHz
@@ -24,12 +24,18 @@ compiler: !!omap
 - clang: -O3 -march=corei7-avx -mtune=corei7-avx -D_POSIX_C_SOURCE=200809L -fopenmp
 - gcc: -O3 -march=corei7-avx -D_POSIX_C_SOURCE=200809L -fopenmp -lm
 
-non-overlapping model:
-  ports: [2D, 3D]
-  performance counter metric: T_nOL + T_L1L2 + T_L2L3 + T_L3MEM
 overlapping model:
-  ports: ['0', 0DV, '1', '2', '3', '4', '5']
+  ports: 
+    IACA: ['0', 0DV, '1', '2', '3', '4', '5']
+    OSACA: ['0', 0DV, '1', '2', '3', '4', '5']
+    LLVM-MCA: [SBDivider, SBFPDivider, SBPort0, SBPort1, SBPort23, SBPort4, SBPort5]
   performance counter metric: Max(UOPS_DISPATCHED_PORT_PORT_0:PMC[0-3], UOPS_DISPATCHED_PORT_PORT_1:PMC[0-3],
+non-overlapping model:
+  ports: 
+    IACA: [2D, 3D]
+    OSACA: [2D, 3D]
+    LLVM-MCA: [SBPort23]
+  performance counter metric: T_nOL + T_L1L2 + T_L2L3 + T_L3MEM
     UOPS_DISPATCHED_PORT_PORT_4:PMC[0-3], UOPS_DISPATCHED_PORT_PORT_5:PMC[0-3])
 
 cacheline size: 64 B
