--- a/_data/machine_files/HaswellEP_E5-2695v3.yml
+++ b/_data/machine_files/HaswellEP_E5-2695v3.yml
@@ -11,9 +11,9 @@ cores per NUMA domain: 14
 NUMA domains per socket: 1
 
 compiler: !!omap
-- icc: -O3 -xCORE-AVX2 -fno-alias -qopenmp
-- clang: -O3 -mavx2 -D_POSIX_C_SOURCE=200809L -fopenmp
-- gcc: -O3 -march=core-avx2 -D_POSIX_C_SOURCE=200809L -fopenmp -lm
+- icc: -O3 -xCORE-AVX2 -fno-alias -qopenmp -ffreestanding -nolib-inline
+- clang: -O3 -mavx2 -D_POSIX_C_SOURCE=200809L -fopenmp -ffreestanding
+- gcc: -O3 -march=core-avx2 -D_POSIX_C_SOURCE=200809L -fopenmp -lm -ffreestanding
 
 in-core model: !!omap
   - IACA: HSW
