--- a/_data/machine_files/BroadwellEP_E5-2630v4.yml
+++ b/_data/machine_files/BroadwellEP_E5-2630v4.yml
@@ -20,10 +20,10 @@ FLOPs per cycle:
   SP: {ADD: 8, FMA: 16, MUL: 8, total: 32}
 
 compiler: !!omap
-- icc: -O3 -xCORE-AVX2 -fno-alias -qopenmp
-- clang: -O3 -mavx2 -D_POSIX_C_SOURCE=200809L -fopenmp
-- gcc: -Ofast -march=core-avx2 -fargument-noalias -ffast-math -D_POSIX_C_SOURCE=200809L
-    -fopenmp -lm
+- icc: -O3 -xCORE-AVX2 -fno-alias -qopenmp -ffreestanding -nolib-inline
+- clang: -O3 -mavx2 -D_POSIX_C_SOURCE=200809L -fopenmp -ffreestanding
+- gcc: -O3 -march=core-avx2 -fargument-noalias -ffast-math -D_POSIX_C_SOURCE=200809L
+    -fopenmp -lm -ffreestanding
 
 non-overlapping model:
   ports:
