--- a/_data/machine_files/HaswellEP_E5-2695v3_CoD.yml
+++ b/_data/machine_files/HaswellEP_E5-2695v3_CoD.yml
@@ -19,9 +19,9 @@ FLOPs per cycle:
   SP: {total: 32, FMA: 16, ADD: 8, MUL: 8}
   DP: {total: 16, FMA: 8, ADD: 4, MUL: 4}
 compiler: !!omap
-- icc: -O3 -xCORE-AVX2 -fno-alias -qopenmp
-- clang: -O3 -mavx2 -D_POSIX_C_SOURCE=200809L -fopenmp
-- gcc: -O3 -march=core-avx2 -D_POSIX_C_SOURCE=200809L -fopenmp -lm
+- icc: -O3 -xCORE-AVX2 -fno-alias -qopenmp -ffreestanding -nolib-inline
+- clang: -O3 -mavx2 -D_POSIX_C_SOURCE=200809L -fopenmp -ffreestanding
+- gcc: -O3 -march=core-avx2 -D_POSIX_C_SOURCE=200809L -fopenmp -lm -ffreestanding
 
 overlapping model:
   ports:
