added gcc/9.0.0 to module imports, fixed warmup module setup

--- a/config/hosts.yml
+++ b/config/hosts.yml
@@ -4,7 +4,7 @@ phinally:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
         - source /etc/profile
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.7 -g performance
     machine_filename: SandyBridgeEP_E5-2680.yml 
@@ -15,7 +15,7 @@ ivyep1:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
         - source /etc/profile
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 3.0 -g performance
     machine_filename: IvyBridgeEP_E5-2690v2.yml 
@@ -26,7 +26,7 @@ hasep1:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup: 
         - source /etc/profile
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.3 -g performance --umin 2.3 --umax 2.3
     machine_filename: HaswellEP_E5-2695v3_CoD.yml 
@@ -37,7 +37,7 @@ broadep2:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
         - source /etc/profile
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.3 -g performance --umin 2.3 --umax 2.3
     machine_filename: BroadwellEP_E5-2697v4_CoD.yml 
@@ -48,7 +48,7 @@ skylakesp2:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
         - source /etc/profile
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 clang/8.0.0
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.4 -g performance --umin 2.4 --umax 2.4
     machine_filename: SkylakeSP_Gold-6148_SNC.yml 
@@ -59,7 +59,7 @@ casclakesp2:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
         - source /etc/profile
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.5 -g performance --umin 2.5 --umax 2.5
     machine_filename: CascadelakeSP_Gold-6248_SNC.yml 
@@ -70,7 +70,7 @@ naples1:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
         - source /etc/profile
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.3 -g performance
     machine_filename: Zen_EPYC-7451.yml 
@@ -81,7 +81,7 @@ naples1:
 #     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
 #     runtime_setup:
 #         - source /etc/profile
-#         - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0
+#         - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
 #         - source ~/py37/bin/activate
 #         - likwid-setFrequencies -t 0 -f 2.3 -g performance
 #     machine_filename: ~  # TODO
@@ -91,6 +91,7 @@ warmup:
     submission_host: testcluster 
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup: 
+        - source /etc/profile
         - source ~/.bashrc
         - module load likwid/5.0-dev ThunderX2CN99/Ubuntu/16.04/arm-hpc-compiler-19.2/armpl/19.2.0
         - source ~/py37-warmup/bin/activate
