updated and removed old machine files

--- a/_data/machine_files/BroadwellEP_E5-2697v4_CoD.yml
+++ b/_data/machine_files/BroadwellEP_E5-2697v4_CoD.yml
@@ -9,6 +9,7 @@ cores per socket: 18
 threads per core: 2
 NUMA domains per socket: 2
 cores per NUMA domain: 9
+transparent hugepage: always
 
 in-core model: !!omap
   - IACA: BDW
