--- a/_data/machine_files/SkylakeSP_Gold-6148_SNC.yml
+++ b/_data/machine_files/SkylakeSP_Gold-6148_SNC.yml
@@ -12,6 +12,8 @@ cores per socket: 20
 threads per core: 2
 NUMA domains per socket: 2
 cores per NUMA domain: 10
+transparent hugepage: always
+
 clock: 2.4 GHz
 FLOPs per cycle:
   SP:
