--- a/_data/machine_files/Zen_EPYC-7451.yml
+++ b/_data/machine_files/Zen_EPYC-7451.yml
@@ -8,6 +8,7 @@ cores per socket: 24
 threads per core: 2
 NUMA domains per socket: 4
 cores per NUMA domain: 6
+transparent hugepage: always
 
 in-core model: !!omap
   - OSACA: ZEN1
