--- a/_data/machine_files/BroadwellEP_E5-2630v4.yml
+++ b/_data/machine_files/BroadwellEP_E5-2630v4.yml
@@ -8,6 +8,7 @@ cores per socket: 10
 threads per core: 1
 NUMA domains per socket: 1
 cores per NUMA domain: 10
+transparent hugepage: always
 
 in-core model: !!omap
   - IACA: BDW
