--- a/_data/machine_files/HaswellEX_E5-2695v3.yml
+++ b/_data/machine_files/HaswellEX_E5-2695v3.yml
@@ -264,9 +264,9 @@ cores per NUMA domain: 14
 NUMA domains per socket: 1
 compiler:
   !!omap
-  - icc: -O3 -xCORE-AVX2 -fno-alias
-  - gcc: -O3 -march=core-avx2 -D_POSIX_C_SOURCE=200112L
-  - clang: -03 -mavx2 -D_POSIX_C_SOURCE=200112L
+  - icc: -O3 -xCORE-AVX2 -fno-alias -qopenmp -ffreestanding -nolib-inline
+  - gcc: -O3 -march=core-avx2 -D_POSIX_C_SOURCE=200112L -fopenmp -ffreestanding
+  - clang: -O3 -mavx2 -D_POSIX_C_SOURCE=200112L -lm -fopenmp -ffreestanding
 write-allocate: True
 memory hierarchy:
     - level: L1
