--- a/_data/machine_files/IvyBridgeEP-E5-2690v2.yml
+++ b/_data/machine_files/IvyBridgeEP-E5-2690v2.yml
@@ -209,9 +209,9 @@ cores per NUMA domain: 10
 NUMA domains per socket: 1
 compiler:
     !!omap
-    - icc: -O3 -xAVX -fno-alias -qopenmp
-    - clang: -O3 -mavx -D_POSIX_C_SOURCE=200112L -fopenmp
-    - gcc: -O3 -march=corei7-avx -D_POSIX_C_SOURCE=200112L -fopenmp
+    - icc: -O3 -xAVX -fno-alias -qopenmp -ffreestanding -nolib-inline
+    - clang: -O3 -mavx -D_POSIX_C_SOURCE=200112L -fopenmp -ffreestanding
+    - gcc: -O3 -march=corei7-avx -D_POSIX_C_SOURCE=200112L -fopenmp -lm -ffreestanding
 write-allocate: True
 memory hierarchy:
     - level: L1
