--- a/_data/machine_files/SkylakeSP_Platinum-8147_2_7GHz.yml
+++ b/_data/machine_files/SkylakeSP_Platinum-8147_2_7GHz.yml
@@ -29,9 +29,9 @@ FLOPs per cycle:
 micro-architecture: SKX
 compiler:
   !!omap
-  - icc: -O3 -fno-alias -xCORE-AVX512 -qopenmp
-  - clang: -O3 -march=skylake-avx512 -D_POSIX_C_SOURCE=200809L -fopenmp
-  - gcc: -O3 -march=skylake-avx512 -D_POSIX_C_SOURCE=200809L -fopenmp -lm
+  - icc: -O3 -fno-alias -xCORE-AVX512 -qopenmp -qopt-zmm-usage=high -ffreestanding -nolib-inline
+  - clang: -O3 -march=skylake-avx512 -D_POSIX_C_SOURCE=200809L -fopenmp -ffreestanding
+  - gcc: -O3 -march=skylake-avx512 -D_POSIX_C_SOURCE=200809L -fopenmp -lm -ffreestanding
 cacheline size: 64 B
 overlapping model:
   ports: ["0", "0DV", "1", "2", "3", "4", "5", "6", "7"]
