removed likwid from default config, added prefetcher enable to config

--- a/config/hosts.yml
+++ b/config/hosts.yml
@@ -7,6 +7,7 @@ phinally:
         - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.7 -g performance
+        - likwid-features -c N -e HW_PREFETCHER,CL_PREFETCHER,DCU_PREFETCHER,IP_PREFETCHER
     machine_filename: SandyBridgeEP_E5-2680.yml 
 
 ivyep1:
@@ -18,6 +19,7 @@ ivyep1:
         - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 3.0 -g performance
+        - likwid-features -c N -e HW_PREFETCHER,CL_PREFETCHER,DCU_PREFETCHER,IP_PREFETCHER
     machine_filename: IvyBridgeEP_E5-2690v2.yml 
 
 hasep1:
@@ -29,6 +31,7 @@ hasep1:
         - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.3 -g performance --umin 2.3 --umax 2.3
+        - likwid-features -c N -e HW_PREFETCHER,CL_PREFETCHER,DCU_PREFETCHER,IP_PREFETCHER
     machine_filename: HaswellEP_E5-2695v3_CoD.yml 
 
 broadep2:
@@ -40,6 +43,7 @@ broadep2:
         - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.3 -g performance --umin 2.3 --umax 2.3
+        - likwid-features -c N -e HW_PREFETCHER,CL_PREFETCHER,DCU_PREFETCHER,IP_PREFETCHER
     machine_filename: BroadwellEP_E5-2697v4_CoD.yml 
 
 skylakesp2:
@@ -51,6 +55,7 @@ skylakesp2:
         - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.4 -g performance --umin 2.4 --umax 2.4
+        - likwid-features -c N -e HW_PREFETCHER,CL_PREFETCHER,DCU_PREFETCHER,IP_PREFETCHER
     machine_filename: SkylakeSP_Gold-6148_SNC.yml 
 
 casclakesp2:
@@ -62,6 +67,7 @@ casclakesp2:
         - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.5 -g performance --umin 2.5 --umax 2.5
+        - likwid-features -c N -e HW_PREFETCHER,CL_PREFETCHER,DCU_PREFETCHER,IP_PREFETCHER
     machine_filename: CascadelakeSP_Gold-6248_SNC.yml 
 
 naples1:
