--- a/config/kernels.yml
+++ b/config/kernels.yml
@@ -888,8 +888,8 @@
 - type: stempel
   parameter: 3D/r3/box/variable/point-symmetric/double _Complex
 
-- type: likwid-bench
-  parameter: daxpy
-  scaling:
-    first: 100
-    last: 67108864
+# - type: likwid-bench
+#   parameter: daxpy
+#   scaling:
+#     first: 100
+#     last: 67108864
