updated host and kernel files

--- a/config/kernels.yml
+++ b/config/kernels.yml
@@ -617,8 +617,16 @@
   parameter: 3D/r1/box/variable/point-symmetric/double _Complex
 - type: stempel
   parameter: 3D/r2/star/constant/isotropic/float
+  scaling:
+    steps: 25
+    first: 96
+    last: 1300
 - type: stempel
   parameter: 3D/r2/star/constant/isotropic/double
+  scaling:
+    steps: 25
+    first: 96
+    last: 1040  # ~16GB
 - type: stempel
   parameter: 3D/r2/star/constant/isotropic/float _Complex
 - type: stempel
