--- a/config/hosts.yml
+++ b/config/hosts.yml
@@ -81,16 +81,16 @@ naples1:
         - likwid-setFrequencies -t 0 -f 2.3 -g performance
     machine_filename: Zen_EPYC-7451.yml 
 
-# rome1:
-#     nodelist: [rome1]
-#     submission_host: testcluster 
-#     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
-#     runtime_setup:
-#         - source /etc/profile
-#         - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
-#         - source ~/py37/bin/activate
-#         - likwid-setFrequencies -t 0 -f 2.3 -g performance
-#     machine_filename: ~  # TODO
+rome1:
+    nodelist: [rome1]
+    submission_host: testcluster 
+    slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
+    runtime_setup:
+        - source /etc/profile
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda gcc/9.1.0 llvm/11.0.0-dolw55
+        - source ~/py37/bin/activate
+        - likwid-setFrequencies -t 0 -f 2.35 -g performance
+    machine_filename: Zen2_EPYC-7452.yml
 
 warmup:
     nodelist: [warmup]
