add rudimentary upload functionality

--- a/config/config.yml
+++ b/config/config.yml
@@ -4,6 +4,7 @@ hosts_file: hosts.yml
 machinefiles_dir: ../machine_files
 kernels_file: kernels.yml
 namedkernels_dir: ../kernels
+webroot_dir: /home/saturn/unrz/unrza308/INSPECT_webroot
 
 # Notebooks to use for workloads, selected by kernel type:
 report_templates:
@@ -11,3 +12,5 @@ report_templates:
   likwid-bench: report-likwid-bench.ipynb
   named: report-named-stempel.ipynb
   stempel: report-named-stempel.ipynb
+
+index_file: index.html
