updated machine files from kerncraft

--- a/_data/machine_files/ARMv8_ThunderX2-CN9980.yml
+++ b/_data/machine_files/ARMv8_ThunderX2-CN9980.yml
@@ -46,9 +46,9 @@ overlapping model:
 memory hierarchy:
 - level: L1
   performance counter metrics:
-    accesses: 'INFORMATION_REQUIRED (e.g., L1D_REPLACEMENT__PMC0)'
-    evicts: 'INFORMATION_REQUIRED (e.g., L2_LINES_OUT_DIRTY_ALL__PMC2)'
-    misses: 'INFORMATION_REQUIRED (e.g., L2_LINES_IN_ALL__PMC1)'
+    accesses: LD_RETIRED:PMC[0-5]
+    evicts: L1D_CACHE_WB:PMC[0-5]
+    misses: L1D_CACHE_REFILL:PMC[0-5]
   cache per group: {sets: 64, ways: 8, cl_size: 64 B, replacement_policy: LRU, write_allocate: true,
       write_back: true, load_from: L2, store_to: L2}
   size per group: 32.00 kB
@@ -61,9 +61,9 @@ memory hierarchy:
   upstream throughput: [64 B/cy, half-duplex]
   transfers overlap: false
   performance counter metrics:
-    accesses: 'INFORMATION_REQUIRED (e.g., L1D_REPLACEMENT__PMC0)'
-    evicts: 'INFORMATION_REQUIRED (e.g., L2_LINES_OUT_DIRTY_ALL__PMC2)'
-    misses: 'INFORMATION_REQUIRED (e.g., L2_LINES_IN_ALL__PMC1)'
+    accesses: L1D_CACHE_REFILL:PMC[0-5]
+    evicts: L2D_CACHE_WB:PMC[0-5]
+    misses: L2D_CACHE_REFILL:PMC[0-5] - L2D_CACHE_ALLOCATE:PMC[0-5]
   cache per group: {sets: 512, ways: 8, cl_size: 64 B, replacement_policy: LRU,
                     write_allocate: true, write_back: true, load_from: ~, store_to: L3,
                     victims_to: L3}
@@ -75,9 +75,9 @@ memory hierarchy:
   upstream throughput: [32 B/cy, half-duplex]
   transfers overlap: false
   performance counter metrics:
-    accesses: 'INFORMATION_REQUIRED (e.g., L1D_REPLACEMENT__PMC0)'
-    evicts: 'INFORMATION_REQUIRED (e.g., L2_LINES_OUT_DIRTY_ALL__PMC2)'
-    misses: 'INFORMATION_REQUIRED (e.g., L2_LINES_IN_ALL__PMC1)'
+    accesses: L2D_CACHE_REFILL:PMC[0-5] - L2D_CACHE_ALLOCATE:PMC[0-5]
+    evicts: MEMORY_WRITES:MBOX0C[01] + MEMORY_WRITES:MBOX1C[01]
+    misses: MEMORY_READS:MBOX0C[01] + MEMORY_READS:MBOX1C[01]
   cache per group: {sets: 65536, ways: 8, cl_size: 64 B, replacement_policy: LRU,
                     write_allocate: false, write_back: true}
   size per group: 32.00 MB
