--- a/_data/machine_files/IvyBridgeEP_E5-2690v2.yml
+++ b/_data/machine_files/IvyBridgeEP_E5-2690v2.yml
@@ -1,4 +1,4 @@
-kerncraft version: 0.8.6.dev0
+kerncraft version: 0.8.11.dev0
 model name: Intel(R) Xeon(R) CPU E5-2690 v2 @ 3.00GHz
 model type: Intel Xeon IvyBridge EN/EP/EX processor
 clock: 3.00 GHz
@@ -48,7 +48,8 @@ memory hierarchy:
   threads per group: 2
   groups: 16
   performance counter metrics:
-    accesses: MEM_UOPS_RETIRED_LOADS:PMC[0-3] + MEM_UOPS_RETIRED_STORES:PMC[0-3]
+    loads: MEM_UOPS_RETIRED_LOADS:PMC[0-3]
+    stores: MEM_UOPS_RETIRED_STORES:PMC[0-3]
     misses: L1D_REPLACEMENT:PMC[0-3]
     evicts: L1D_M_EVICT:PMC[0-3]
   upstream throughput: [architecture code analyzer, [2D, 3D]]
@@ -63,7 +64,8 @@ memory hierarchy:
   upstream throughput: [32 B/cy, half-duplex]
   transfers overlap: false
   performance counter metrics:
-    accesses: L1D_REPLACEMENT:PMC[0-3] + L1D_M_EVICT:PMC[0-3]
+    loads: L1D_REPLACEMENT:PMC[0-3]
+    stores: L1D_M_EVICT:PMC[0-3]
     misses: L2_LINES_IN_ALL:PMC[0-3]
     evicts: L2_TRANS_L2_WB:PMC[0-3]
   size per group: 262144 B
@@ -76,7 +78,8 @@ memory hierarchy:
   upstream throughput: [32 B/cy, half-duplex]
   transfers overlap: false
   performance counter metrics:
-    accesses: L2_LINES_IN_ALL:PMC[0-3] + L2_TRANS_L2_WB:PMC[0-3]
+    loads: L2_LINES_IN_ALL:PMC[0-3]
+    stores: L2_TRANS_L2_WB:PMC[0-3]
     misses: (CAS_COUNT_RD:MBOX0C[01] + CAS_COUNT_RD:MBOX1C[01] + CAS_COUNT_RD:MBOX2C[01]
       + CAS_COUNT_RD:MBOX3C[01] + CAS_COUNT_RD:MBOX4C[01] + CAS_COUNT_RD:MBOX5C[01]
       + CAS_COUNT_RD:MBOX6C[01] + CAS_COUNT_RD:MBOX7C[01])
@@ -88,6 +91,13 @@ memory hierarchy:
   cores per group: 10
   upstream throughput: [full socket memory bandwidth, half-duplex]
   transfers overlap: false
+  performance counter metrics:
+    loads: (CAS_COUNT_RD:MBOX0C[01] + CAS_COUNT_RD:MBOX1C[01] + CAS_COUNT_RD:MBOX2C[01]
+      + CAS_COUNT_RD:MBOX3C[01] + CAS_COUNT_RD:MBOX4C[01] + CAS_COUNT_RD:MBOX5C[01]
+      + CAS_COUNT_RD:MBOX6C[01] + CAS_COUNT_RD:MBOX7C[01])
+    stores: (CAS_COUNT_WR:MBOX0C[01] + CAS_COUNT_WR:MBOX1C[01] + CAS_COUNT_WR:MBOX2C[01]
+      + CAS_COUNT_WR:MBOX3C[01] + CAS_COUNT_WR:MBOX4C[01] + CAS_COUNT_WR:MBOX5C[01]
+      + CAS_COUNT_WR:MBOX6C[01] + CAS_COUNT_WR:MBOX7C[01])
   size per group:
   threads per group: 20
 
