added dissertation kernel list

--- a/config/config.yml
+++ b/config/config.yml
@@ -2,7 +2,7 @@
 jobs_dir: ../jobs
 hosts_file: hosts.yml
 machinefiles_dir: ../machine_files
-kernels_file: kernels.yml
+kernels_file: kernels-diss.yml  #kernels.yml
 namedkernels_dir: ../kernels
 webroot_dir: /home/saturn/unrz/unrza308/INSPECT_webroot
 
