--- a/config/hosts.yml
+++ b/config/hosts.yml
@@ -103,3 +103,12 @@ warmup:
         - source ~/py37-warmup/bin/activate
     machine_filename: ARMv8_ThunderX2-CN9980.yml 
     ignore_kerncraft_warnings: true
+
+qpace4:
+    nodelist: [qp4-node-006]
+    submission_host: kern-login-001  # ssh qpace
+    slurm_arguments: -M qp4 -N 1 --export=None --time=24:00:00
+    runtime_setup:
+        - source ~/py38/bin/activate
+    machine_filename: A64FX_qpace4.yml
+    ignore_kerncraft_warnings: true
