--- a/_data/machine_files/A64FX_qpace4.yml
+++ b/_data/machine_files/A64FX_qpace4.yml
@@ -4,14 +4,14 @@ model type: Fujitsu A64FX
 kerncraft version: 0.8.11.dev0
 cacheline size: 256 B
 clock: 1.8 GHz
-compiler:
-  - gcc: '-O3 -D_POSIX_C_SOURCE=200112L -msve-vector-bits=512 -march=armv8.2-a+sve'
-  - clang: 'INFORMATION_REQUIRED
-    (e.g., -O3 -mavx, -D_POSIX_C_SOURCE=200112L, check `gcc -march=native -Q --help=target | grep -- "-march="`)'
+compiler: !!omap
+  - gcc: '-Ofast -D_POSIX_C_SOURCE=200112L -msve-vector-bits=512 -march=armv8.2-a+sve -ffreestanding'
+  - clang: '-Ofast -target aarch64-unknown-linux-gnu -ffreestanding'  # on newer LLVM versions use -march=a64fx
 cores per NUMA domain: 12
 cores per socket: 12
-in-core model:
-   - OSACA: A64FX # LLVM-MCA: 'INFORMATION_REQUIRED (e.g., -mcpu=skylake-avx512)'
+in-core model: !!omap
+   - OSACA: A64FX
+   - LLVM-MCA: -mcpu=a64fx -march=aarch64
 isa: aarch64
 FLOPs per cycle:
   DP: {ADD: INFORMATION_REQUIRED, FMA: INFORMATION_REQUIRED, MUL: INFORMATION_REQUIRED,
@@ -21,6 +21,8 @@ FLOPs per cycle:
 NUMA domains per socket: 1
 memory hierarchy:
 - level: L1
+  upstream throughput: [architecture code analyzer, ['5D', '6D']]
+  transfers overlap: false
   performance counter metrics:
     loads: 'LD_SPEC:PMC[0-4]'
     stores: 'ST_SPEC:PMC[0-4]'
@@ -40,6 +42,8 @@ memory hierarchy:
   cores per group: 1
   threads per group: 1
 - level: L2
+  upstream throughput: [64 B/cy, half-duplex]  # https://arxiv.org/pdf/2103.03013.pdf
+  transfers overlap: false
   performance counter metrics:
     loads: 'L1D_CACHE_REFILL:PMC[0-4]'
     stores: 'L1D_CACHE_WB:PMC[0-4]'
@@ -59,22 +63,26 @@ memory hierarchy:
 - level: MEM
   cores per group: 12
   threads per group: 12
-  upstream throughput: [
-      full socket memory bandwidth, INFORMATION_REQUIRED (e.g. "half-duplex" or "full-duplex")]
+  upstream throughput: [full socket memory bandwidth, "half-duplex"]
+  transfers overlap: true
   performance counter metrics:
     stores: 'BUS_WRITE_TOTAL_MEM:PMC[0-4]'
     loads: 'BUS_READ_TOTAL_MEM:PMC[0-4]'
   penalty cycles per cacheline load: 0
   penalty cycles per cacheline store: 0
   size per group: null
-non-overlapping model: {performance counter metric: 'INFORMATION_REQUIRED Example:max(UOPS_DISPATCHED_PORT_PORT_0__PMC2,
-    UOPS_DISPATCHED_PORT_PORT_1__PMC3,    UOPS_DISPATCHED_PORT_PORT_4__PMC0, UOPS_DISPATCHED_PORT_PORT_5__PMC1)',
-  ports: 'INFORMATION_REQUIRED (list of ports as they appear in IACA, e.g.,, ["0",
-    "0DV", "1", "2", "2D", "3", "3D", "4", "5", "6", "7"])'}
-overlapping model: {performance counter metric: 'INFORMATION_REQUIRED Example:max(UOPS_DISPATCHED_PORT_PORT_0__PMC2,
-    UOPS_DISPATCHED_PORT_PORT_1__PMC3,    UOPS_DISPATCHED_PORT_PORT_4__PMC0, UOPS_DISPATCHED_PORT_PORT_5__PMC1)',
-  ports: 'INFORMATION_REQUIRED (list of ports as they appear in IACA, e.g.,, ["0",
-    "0DV", "1", "2", "2D", "3", "3D", "4", "5", "6", "7"])'}
+non-overlapping model:
+    performance counter metric: 'INFORMATION_REQUIRED Example:max(UOPS_DISPATCHED_PORT_PORT_0__PMC2,UOPS_DISPATCHED_PORT_PORT_1__PMC3, UOPS_DISPATCHED_PORT_PORT_4__PMC0, UOPS_DISPATCHED_PORT_PORT_5__PMC1)'
+    ports:
+      OSACA: []
+      LLVM-MCA: []
+
+overlapping model: 
+    performance counter metric: 'INFORMATION_REQUIRED Example:max(UOPS_DISPATCHED_PORT_PORT_0__PMC2,UOPS_DISPATCHED_PORT_PORT_1__PMC3,    UOPS_DISPATCHED_PORT_PORT_4__PMC0, UOPS_DISPATCHED_PORT_PORT_5__PMC1)'
+    ports:
+      OSACA: ['0', 0DV, '1', '2', '3', '4', '5', '6', '7', '5D', '6D']
+      LLVM-MCA: [A64FXIPBR, A64FXIPEAGA, A64FXIPEAGB, A64FXIPEXA,A64FXIPEXB, A64FXIPFLA, A64FXIPFLB, A64FXIPPR]
+
 sockets: 4
 threads per core: 1
 transparent hugepage: never
